--- a/index.html
+++ b/index.html
@@ -1,41 +1,13 @@
-<div id="identity-steps" class="card">
-  <h2>Select who you are:</h2>
-  <div class="step">
-    <label>Age:</label><br>
-    <input type="radio" name="age" value="young"> Young<br>
-    <input type="radio" name="age" value="old"> Old<br>
-  </div>
-  <div class="step">
-    <label>Education:</label><br>
-    <input type="radio" name="education" value="high school"> High School<br>
-    <input type="radio" name="education" value="college"> College<br>
-    <input type="radio" name="education" value="PhD"> PhD<br>
-  </div>
-  <div class="step">
-    <label>Attitude toward authority:</label><br>
-    <input type="radio" name="authority" value="anti-authority"> Anti-authority<br>
-    <input type="radio" name="authority" value="pro-authority"> Pro-authority<br>
-  </div>
-</div>
-
-<div id="opposed-steps" class="card">
-  <h2>Select who you're opposed to:</h2>
-  <div class="step">
-    <label>Opposed Age Group:</label><br>
-    <input type="radio" name="opp-age" value="young"> Young<br>
-    <input type="radio" name="opp-age" value="old"> Old<br>
-  </div>
-  <div class="step">
-    <label>Opposed Education Level:</label><br>
-    <input type="radio" name="opp-education" value="high school"> High School<br>
-    <input type="radio" name="opp-education" value="college"> College<br>
-    <input type="radio" name="opp-education" value="PhD"> PhD<br>
-  </div>
-  <div class="step">
-    <label>Opposed Authority Stance:</label><br>
-    <input type="radio" name="opp-authority" value="anti-authority"> Anti-authority<br>
-    <input type="radio" name="opp-authority" value="pro-authority"> Pro-authority<br>
-  </div>
-</div>
-
-<button onclick="startVirtueTest()">Start Test</button>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Virtue Score</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div id="question-container" class="card"></div>
+  <script src="script.js"></script>
+</body>
+</html>
