--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
   <title>The Virtue Mirror</title>
   <style>
     body {
@@ -12,7 +11,6 @@
       padding: 2rem;
       line-height: 1.6;
     }
-
     .container {
       max-width: 600px;
       margin: auto;
@@ -21,85 +19,65 @@
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
     }
-
     h1, h2 {
       text-align: center;
     }
-
-    button {
-      background-color: #444;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
+    select, button {
+      width: 100%;
+      padding: 10px;
+      margin: 0.5rem 0 1rem 0;
       border-radius: 8px;
-      cursor: pointer;
-      margin-top: 1rem;
+      border: none;
+      background-color: #333;
+      color: #fff;
     }
-
     button:hover {
-      background-color: #666;
+      background-color: #555;
     }
-
     .question {
       margin-bottom: 1.5rem;
     }
-
     .result {
       padding: 1rem;
       margin-top: 2rem;
-      background-color: #222;
+      background: #222;
       border-radius: 8px;
-    }
-
-    select {
-      margin-bottom: 1rem;
-      width: 100%;
-      padding: 0.5rem;
-      background-color: #333;
-      color: #fff;
-      border: 1px solid #555;
-      border-radius: 6px;
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>The Virtue Mirror</h1>
+    <h2>Identity Declaration</h2>
+    
+    <label>I am:</label>
+    <select id="identity">
+      <option>Young Liberal</option>
+      <option>Conservative Veteran</option>
+      <option>Progressive Activist</option>
+      <option>Rural Libertarian</option>
+    </select>
 
-    <div id="quiz">
-      <h2>Identity Declaration</h2>
-      <p>I am:</p>
-      <select id="identity">
-        <option value="Young Liberal">Young Liberal</option>
-        <option value="Old Conservative">Old Conservative</option>
-        <option value="Anarchist">Anarchist</option>
-        <option value="Technocrat">Technocrat</option>
-        <option value="Patriot">Patriot</option>
-      </select>
+    <label>Opposed to:</label>
+    <select id="opposed">
+      <option>Street Protesters</option>
+      <option>Corporate Elites</option>
+      <option>Religious Traditionalists</option>
+      <option>University Professors</option>
+    </select>
 
-      <p>Opposed to:</p>
-      <select id="opposed">
-        <option value="Corporate Elites">Corporate Elites</option>
-        <option value="Street Protesters">Street Protesters</option>
-        <option value="The State">The State</option>
-        <option value="Academics">Academics</option>
-        <option value="Youth Culture">Youth Culture</option>
-      </select>
+    <button onclick="startQuiz()">Begin Virtue Test</button>
 
-      <button onclick="startQuiz()">Begin Virtue Test</button>
-    </div>
-
-    <div id="questions" style="display: none;">
+    <div id="quiz" style="display:none;">
       <div class="question">
-        <p>If someone from your *opposing group* said something true, would you acknowledge it?</p>
-        <label><input type="radio" name="q1" value="yes" /> Yes</label><br/>
-        <label><input type="radio" name="q1" value="no" /> No</label>
+        <p>Would you defend someone’s right to protest if they belonged to the group you oppose?</p>
+        <label><input type="radio" name="q1" value="yes"> Yes</label><br/>
+        <label><input type="radio" name="q1" value="no"> No</label>
       </div>
-
       <button onclick="showResults()">Submit Answer</button>
     </div>
 
-    <div id="results" class="result" style="display: none;"></div>
+    <div id="results" class="result" style="display:none;"></div>
   </div>
 
   <script>
@@ -109,18 +87,30 @@
     function startQuiz() {
       identity = document.getElementById('identity').value;
       opposed = document.getElementById('opposed').value;
-
-      document.getElementById('quiz').style.display = 'none';
-      document.getElementById('questions').style.display = 'block';
+      document.getElementById('quiz').style.display = 'block';
     }
 
     function showResults() {
       const q1 = document.querySelector('input[name="q1"]:checked');
       if (!q1) {
-        alert('Please answer the question.');
+        alert("Please answer the question.");
         return;
       }
 
       const answer = q1.value;
       const portrayed = answer === 'yes' ? 1 : 0;
-      const revealed = answer === 'yes
+      const revealed = answer === 'yes' ? 1 : 0; // Placeholder for more advanced logic
+
+      let message = `<strong>Your identity:</strong> ${identity} opposed to ${opposed}<br/>`;
+      message += `<strong>You answered:</strong> ${answer.toUpperCase()}<br/>`;
+      message += `<strong>Portrayed Virtue Score:</strong> ${portrayed}/1<br/>`;
+      message += `<strong>Revealed Virtue Score:</strong> ${revealed}/1<br/>`;
+      message += `<em>This is just the beginning. More virtue challenges coming soon!</em>`;
+
+      document.getElementById('quiz').style.display = 'none';
+      document.getElementById('results').style.display = 'block';
+      document.getElementById('results').innerHTML = message;
+    }
+  </script>
+</body>
+</html>
